--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
             gap: 3rem;
             margin-top: 2rem;
             align-items: center;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .info-card {
@@ -174,16 +176,25 @@
             padding: 2rem;
             border-radius: 10px;
             border-left: 5px solid #d4af37;
+            width: 100%;
+            box-sizing: border-box;
+            overflow: hidden;
+            word-wrap: break-word;
+            word-break: break-word;
         }
 
         .info-card h3 {
             color: #1a7c1a;
             margin-bottom: 1rem;
+            word-wrap: break-word;
         }
 
         .info-card p {
             color: #555;
             line-height: 1.8;
+            word-wrap: break-word;
+            word-break: break-word;
+            white-space: normal;
         }
 
         /* Prayer Times */
@@ -335,28 +346,32 @@
         /* Responsive */
         @media (max-width: 768px) {
             .header-content {
-                flex-direction: column;
-                gap: 1rem;
+                flex-direction: row;
+                gap: 0.5rem;
+                justify-content: space-between;
             }
 
             nav {
                 display: grid;
                 grid-template-columns: repeat(2, 1fr);
-                gap: 0.5rem;
-                width: 100%;
+                gap: 0.3rem;
+                width: auto;
+                min-width: auto;
             }
 
             nav a {
                 text-align: center;
-                padding: 0.6rem;
-                font-size: 0.85rem;
+                padding: 0.5rem 0.3rem;
+                font-size: 0.75rem;
                 background: rgba(212, 175, 55, 0.1);
                 border-radius: 5px;
                 margin: 0;
             }
 
             .logo {
-                font-size: 1.5rem;
+                font-size: 1.2rem;
+                flex: 0 0 auto;
+                min-width: auto;
             }
 
             .hero h1 {
@@ -365,6 +380,7 @@
 
             .info-grid {
                 grid-template-columns: 1fr;
+                gap: 1.5rem;
             }
 
             .section h2 {
@@ -392,6 +408,10 @@
             .gallery {
                 grid-template-columns: 1fr;
             }
+
+            .info-card {
+                padding: 1.5rem;
+            }
         }
 
         @media (max-width: 480px) {
@@ -400,48 +420,80 @@
             }
 
             .logo {
-                font-size: 1.2rem;
+                font-size: 1rem;
             }
 
             nav {
-                grid-template-columns: 1fr;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 0.2rem;
             }
 
             nav a {
-                font-size: 0.8rem;
-                padding: 0.5rem;
+                font-size: 0.65rem;
+                padding: 0.4rem 0.2rem;
             }
 
             .hero h1 {
                 font-size: 1.4rem;
             }
 
+            .hero p {
+                font-size: 0.9rem;
+            }
+
             .section h2 {
                 font-size: 1.3rem;
+                padding-bottom: 0.8rem;
             }
 
             .prayer-times {
-                grid-template-columns: 1fr;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 1rem;
             }
 
             .prayer-time .name {
-                font-size: 0.8rem;
+                font-size: 0.75rem;
             }
 
             .prayer-time .time {
-                font-size: 1.2rem;
-            }
-
-            .info-card {
-                padding: 1.5rem 1rem;
-            }
-
-            .footer-section h3 {
                 font-size: 1rem;
             }
 
+            .prayer-time .countdown {
+                font-size: 0.7rem;
+            }
+
+            .info-card {
+                padding: 1rem;
+                border-left: 3px solid #d4af37;
+            }
+
+            .info-card h3 {
+                font-size: 1rem;
+            }
+
+            .info-card p {
+                font-size: 0.9rem;
+            }
+
+            .footer-section h3 {
+                font-size: 0.9rem;
+            }
+
             .footer-section p, .footer-section a {
-                font-size: 0.85rem;
+                font-size: 0.8rem;
+            }
+
+            .schedule-item {
+                padding: 1rem;
+            }
+
+            .schedule-item .details h4 {
+                font-size: 0.9rem;
+            }
+
+            .schedule-item .details p {
+                font-size: 0.8rem;
             }
         }
     </style>
