--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <a href="#" class="logo">🕌 Baiturrahman</a>
+                <a href="#" class="logo">🕌 مُصَلَّى بَيْتُ الرَّحْمٰنِ</a>
                 <nav>
                     <a href="#tentang">Tentang</a>
                     <a href="#galeri">Galeri</a>
@@ -518,8 +518,8 @@
     <section class="hero">
         <div class="container">
             <h1>Musholla Baiturrahman</h1>
-            <p>Rumah Tuhan yang Penuh Rahmat</p>
-            <p style="color: #d4af37; font-size: 1rem;">Pondok Butun, Batulicin, Tanah Bumbu</p>
+            <p>Sholat Berjamaah Lebih utama 27 Derajat dibandingkan sholat sendiri</p>
+            <p style="color: #d4af37; font-size: 1rem;">Gunung Tinggi, Batulicin, Tanah Bumbu</p>
         </div>
     </section>
 
@@ -528,18 +528,21 @@
         <div class="container">
             <h2>Tentang Musholla</h2>
             <div class="info-grid">
+                <!---MASUKKAN GAMBAR MUSHOLLA DISINI--->
                 <div>
-                    <img src="https://images.unsplash.com/photo-1564536131407-4deb1d691e3e?w=500&h=400&fit=crop" alt="Musholla Baiturrahman" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
+                    <img src=foto/musholla.jpg alt="Musholla Baiturrahman" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
                 </div>
                 <div>
                     <div class="info-card">
                         <h3>Deskripsi</h3>
-                        <p>Musholla Baiturrahman adalah tempat ibadah yang nyaman dan sejuk di tengah komunitas Pondok Butun. Kami menyediakan fasilitas lengkap untuk menjalankan ibadah dengan khidmat dan istiqomah. Dengan desain yang indah dan bersih, kami menghadirkan suasana spiritual yang menenangkan untuk setiap jamaah.</p>
+                        <p>Musholla Baiturrahman adalah tempat ibadah yang nyaman dan sejuk di tengah komunitas Gunung Tinggi. Kami menyediakan fasilitas lengkap untuk menjalankan ibadah dengan khidmat dan istiqomah. Dengan desain yang indah dan bersih, kami menghadirkan suasana spiritual yang menenangkan untuk setiap jamaah.</p>
                     </div>
 
                     <div class="info-card" style="margin-top: 1.5rem;">
                         <h3>📍 Alamat Lengkap</h3>
-                        <p>Pondok Butun<br>Kecamatan Batulicin<br>Kabupaten Tanah Bumbu<br>Kalimantan Selatan</p>
+                        <p> Jalan PDSB Gunung Tinggi RT.003 RW.002 Kelurahan Gunung Tinggi Kecamatan Batulicin<br>
+                            Kabupaten Tanah Bumbu Provinsi Kalimantan Selatan, 72214<br>
+                            Maps : https://maps.app.goo.gl/j8E8BB3axp7xZCkB6</p>
                     </div>
                 </div>
             </div>
@@ -550,7 +553,7 @@
     <section class="section" id="jadwal-sholat">
         <div class="container">
             <h2>Jadwal Waktu Sholat</h2>
-            <p style="text-align: center; color: #666; margin-bottom: 1rem;">Wilayah Pondok Butun, Batulicin, Tanah Bumbu</p>
+            <p style="text-align: center; color: #666; margin-bottom: 1rem;">Wilayah Gunung Tinggi, Batulicin, Tanah Bumbu</p>
             <div class="prayer-times" id="prayerTimesContainer">
                 <!-- Prayer times akan dimuat secara real-time -->
                 <div class="prayer-time" style="opacity: 0.7; text-align: center; grid-column: 1 / -1;">
@@ -565,21 +568,19 @@
         <div class="container">
             <h2>Galeri Kegiatan</h2>
             <div class="gallery" id="gallery">
-                <!-- Tambah foto dengan format:
+                <!-- Foto dapat ditambahkan di sini dengan format:
                 <div class="gallery-item">
-                    <img src="foto/musholla.jpg" alt="Deskripsi Foto">
-                </div>
-                
-                CONTOH: Jika ada foto bernama kegiatan1.jpg, kegiatan2.jpg di folder foto:
-                <div class="gallery-item">
-                    <img src="foto/kegiatan1.jpg" alt="Kegiatan 1">
-                </div>
-                <div class="gallery-item">
-                    <img src="foto/kegiatan2.jpg" alt="Kegiatan 2">
+                    <img src="URL_FOTO" alt="Deskripsi">
                 </div>
                 -->
                 <div class="gallery-item">
-                    <img src="foto/musholla.jpg" alt="Musholla Baiturrahman">
+                    <img src=kegiatan/maulid.png alt="Kegiatan Musholla">
+                </div>
+                <div class="gallery-item">
+                    <img src="https://images.unsplash.com/photo-1564536131407-4deb1d691e3e?w=400&h=300&fit=crop" alt="Kegiatan Musholla">
+                </div>
+                <div class="gallery-item">
+                    <img src="https://images.unsplash.com/photo-1511884642898-4c92249e20b6?w=400&h=300&fit=crop" alt="Kegiatan Musholla">
                 </div>
             </div>
         </div>
@@ -623,9 +624,8 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>📍 Lokasi</h3>
-                    <p>Pondok Butun, Kecamatan Batulicin</p>
-                    <p>Kabupaten Tanah Bumbu</p>
-                    <p>Kalimantan Selatan</p>
+                    <p>Jalan PDSB Gunung Tinggi RT.003 RW.002 Kelurahan Gunung Tinggi Kecamatan Batulicin Kabupaten Tanah Bumbu Provinsi Kalimantan Selatan, 72214</p>
+                    <p>Maps : https://maps.app.goo.gl/j8E8BB3axp7xZCkB6</p>
                 </div>
 
                 <div class="footer-section">
@@ -696,11 +696,11 @@
         // Format: { name: 'Nama Sholat', offset: perubahan dalam menit }
         // Contoh: offset: 5 = tambah 5 menit, offset: -3 = kurangi 3 menit, offset: 0 = tidak ada perubahan
         const prayerAdjustments = {
-            subuh: 0,      // Sesuaikan offset untuk Subuh (misal: 5 untuk +5 menit)
-            zuhur: 0,      // Sesuaikan offset untuk Zuhur
-            ashar: 0,      // Sesuaikan offset untuk Ashar
-            maghrib: 0,    // Sesuaikan offset untuk Maghrib
-            isya: 0        // Sesuaikan offset untuk Isya
+            subuh: -4,      // Sesuaikan offset untuk Subuh (misal: 5 untuk +5 menit)
+            zuhur: -2,      // Sesuaikan offset untuk Zuhur
+            ashar: -3,      // Sesuaikan offset untuk Ashar
+            maghrib: -2,    // Sesuaikan offset untuk Maghrib
+            isya: -2        // Sesuaikan offset untuk Isya
         };
 
         // Fungsi untuk menampilkan jadwal sholat dengan countdown
@@ -872,11 +872,6 @@
 
         // Update jadwal sholat setiap jam
         setInterval(loadPrayerTimes, 3600000);
-
-        // Inisialisasi halaman
-        document.addEventListener('DOMContentLoaded', function() {
-            loadPrayerTimes();
-        });
     </script>
 </body>
 </html>
