--- a/index.html
+++ b/index.html
@@ -518,15 +518,14 @@
     <section class="hero">
         <div class="container">
             <h1>Musholla Baiturrahman</h1>
-            <p>Sholat Berjamaah Lebih utama 27 Derajat dibandingkan sholat sendiri</p>
-            <p style="color: #d4af37; font-size: 1rem;">Gunung Tinggi, Batulicin, Tanah Bumbu</p>
+            <p style="color: #d4af37; font-size: 2rem;">Gunung Tinggi, Batulicin, Tanah Bumbu</p>
         </div>
     </section>
 
     <!-- Tentang Section -->
     <section class="section" id="tentang">
         <div class="container">
-            <h2>Tentang Musholla</h2>
+            <h2>Tentang Musholla Baiturrahman</h2>
             <div class="info-grid">
                 <!---MASUKKAN GAMBAR MUSHOLLA DISINI--->
                 <div>
@@ -603,15 +602,15 @@
                 <li class="schedule-item">
                     <div class="date">28 November 2025</div>
                     <div class="details">
-                        <h4>Pengajian Rutin</h4>
-                        <p>Waktu: 19:00 | Tempat: Ruang Utama Musholla</p>
+                        <h4>Taman Pendidikan Al-Qur'an</h4>
+                        <p>Waktu: 16:00 | Tempat: Ruang Utama Musholla</p>
                     </div>
                 </li>
                 <li class="schedule-item">
                     <div class="date">05 Desember 2025</div>
                     <div class="details">
-                        <h4>Taklim Qur'an</h4>
-                        <p>Waktu: 20:00 | Tempat: Ruang Kelas</p>
+                        <h4>Comming Soon</h4>
+                        <p>Waktu: - | Tempat: -</p>
                     </div>
                 </li>
             </ul>
@@ -630,9 +629,9 @@
 
                 <div class="footer-section">
                     <h3>📞 Kontak</h3>
-                    <a href="tel:+62XXXXXXXXXX">Telp: +62 XXX XXXX XXXX</a>
-                    <a href="https://wa.me/62XXXXXXXXXX">WhatsApp: +62 XXX XXXX XXXX</a>
-                    <a href="mailto:info@baiturahman.com">Email: info@baiturrahman.com</a>
+                    <a href="tel:+62XXXXXXXXXX">Telp: +62 822 5297 7196</a>
+                    <a href="https://wa.me/62XXXXXXXXXX">WhatsApp: +62 822 5297 7196</a>
+                    <a href="mailto:info@baiturahman.com">Email: mushollabaiturrahmangt.com</a>
                 </div>
 
                 <div class="footer-section">
@@ -647,7 +646,7 @@
 
                 <div class="footer-section">
                     <h3>🌐 Website</h3>
-                    <p>www.baiturrahman.com</p>
+                    <p>https://mushollabaiturrahmangtdotcom.github.io/mushollabaiturrahmangt.github.io</p>
                 </div>
             </div>
 
@@ -875,3 +874,4 @@
     </script>
 </body>
 </html>
+
