Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
     <section class="hero">
         <div class="container">
             <h1>Musholla Baiturrahman</h1>
-            <p style="color: #d4af37; font-size: 2rem;">Gunung Tinggi, Batulicin, Tanah Bumbu</p>
+            <p style="color: #d4af37; font-size: 1.5rem;">وَاسْتَعِيْنُوْا بِالصَّبْرِ وَالصَّلٰوةِ ۗ وَاِنَّهَا لَكَبِيْرَةٌ اِلَّا عَلَى الْخٰشِعِيْنَۙ (Al-Baqarah, 45)</p>
         </div>
     </section>
 
@@ -874,4 +874,5 @@
     </script>
 </body>
 </html>
+
 
