Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -573,6 +573,9 @@
                 </div>
                 -->
                 <div class="gallery-item">
+                    <img src="Nisfu Sya'ban.jpeg" alt="Deskripsi">
+                </div>
+                <div class="gallery-item">
                     <img src=kegiatan/maulid.png alt="Kegiatan Musholla">
                 </div>
                 <div class="gallery-item">
@@ -874,5 +877,6 @@
     </script>
 </body>
 </html>
+
 
 
