--- a/index.html
+++ b/index.html
@@ -573,11 +573,9 @@
                 </div>
                 -->
                 <div class="gallery-item">
-                    <img src="Nisfu Sya'ban.jpeg" alt="Deskripsi">
+                    <img src="../kegiatan/Nisfu Sya'ban.jpeg" alt="Deskripsi">
                 </div>
-                <div class="gallery-item">
-                    <img src=kegiatan/maulid.png alt="Kegiatan Musholla">
-                </div>
+              
                 <div class="gallery-item">
                     <img src="https://images.unsplash.com/photo-1564536131407-4deb1d691e3e?w=400&h=300&fit=crop" alt="Kegiatan Musholla">
                 </div>
@@ -877,6 +875,7 @@
     </script>
 </body>
 </html>
+
 
 
 
