--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                 </div>
                 -->
                 <div class="gallery-item">
-                    <img src="../kegiatan/Nisfu Sya'ban.jpeg" alt="Deskripsi">
+                    <img src="kegiatan/nisfu.png" alt="Deskripsi">
                 </div>
               
                 <div class="gallery-item">
@@ -875,6 +875,7 @@
     </script>
 </body>
 </html>
+
 
 
 
