Update greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                 </div>
                 -->
                 <div class="gallery-item">
-                    <img src="kegiatan/nisfu.png" alt="Deskripsi">
+                   <img src=kegiatan/nisfu.png alt="Musholla Baiturrahman">
                 </div>
               
                 <div class="gallery-item">
