Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
             <div class="info-grid">
                 <!---MASUKKAN GAMBAR MUSHOLLA DISINI--->
                 <div>
-                    <img src=foto/waktu subuh.jpeg alt="Musholla Baiturrahman" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
+                    <img src=foto/subuh.jpeg alt="Musholla Baiturrahman" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
                 </div>
                 <div>
                     <div class="info-card">
@@ -875,6 +875,7 @@
     </script>
 </body>
 </html>
+
 
 
 
