--- a/hadis-bukhari.html
+++ b/hadis-bukhari.html
@@ -551,12 +551,12 @@ nav {
 
 <!-- NAV -->
 <nav>
-  <a href="musholla-baiturrahman.html" class="nav-brand">
+  <a href="index.html" class="nav-brand">
     <img src="images/logo_nav.png" alt="Logo">
     <span>Musholla Baiturrahman</span>
   </a>
   <div class="nav-right">
-    <a href="musholla-baiturrahman.html" class="nav-back">← Kembali</a>
+    <a href="index.html" class="nav-back">← Kembali</a>
   </div>
 </nav>
 
