--- a/hadis-muslim.html
+++ b/hadis-muslim.html
@@ -143,11 +143,11 @@ nav{position:fixed;top:0;left:0;right:0;z-index:200;height:60px;background:var(-
 <body>
 
 <nav>
-  <a href="musholla-baiturrahman.html" class="nav-brand">
+  <a href="index.html" class="nav-brand">
     <img src="images/logo_nav.png" alt="Logo">
     <span>Musholla Baiturrahman</span>
   </a>
-  <a href="musholla-baiturrahman.html" class="nav-back">← Kembali</a>
+  <a href="index.html" class="nav-back">← Kembali</a>
 </nav>
 
 <div class="layout">
