--- a/index.html
+++ b/index.html
@@ -1015,13 +1015,13 @@
           </div>
         </div>
 
-        <a href="https://www.google.com/maps/place/Musholla+Baiturrahman/@-3.472443,115.9503798,1210m/data=!3m1!1e3!4m6!3m5!1s0x2de8b7004d4ff72b:0xf6d528e13c2a813d!8m2!3d-3.4724327!4d115.9504838!16s%2Fg%2F11mrrngq_d?entry=ttu&g_ep=EgoyMDI2MDIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="maps-btn">
+        <a href="https://maps.app.goo.gl/1aDRve8YeWLAQGQs6" target="_blank" class="maps-btn">
           🗺️ Buka di Google Maps
         </a>
       </div>
 
       <div class="maps-frame">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5268.506619992866!2d115.9503798!3d-3.4724429999999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2de8b7004d4ff72b%3A0xf6d528e13c2a813d!2sMusholla%20Baiturrahman!5e1!3m2!1sid!2sid!4v1771395864334!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d998.1947610502193!2d115.95074503628815!3d-3.472972488145664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2de8b7005adee33d%3A0xce3f248ec4ad996f!2sMusholla%20Baiturrahman!5e1!3m2!1sid!2sid!4v1771916320194!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </div>
